--- a/templates/attributes/edit.html.twig
+++ b/templates/attributes/edit.html.twig
@@ -1,36 +1,44 @@
 {% extends 'base-admin.html.twig' %}
 
-{% block title %}Edit Attributes{% endblock %}
+{% block title %}Ludo et Sophie - Editer d'un attribut{% endblock %}
 
 {% block body %}
 
-        <!-- Content Header (Page header) -->
-    <div class="content-header">
-        <div class="container-fluid">
-            <div class="row mb-2">
-            <div class="col-sm-6">
-                <h1 class="m-0 text-dark">Ludo et Sophie - Edition d'un attribut</h1>
-            </div><!-- /.col -->
-            <div class="col-sm-6">
-                <ol class="breadcrumb float-sm-right">
-                <li class="breadcrumb-item"><a href="{{ path('admin') }}">Dashboard</a></li>
-                <li class="breadcrumb-item active">Attributs</li>
-                </ol>
-            </div><!-- /.col -->
-            </div><!-- /.row -->
-        </div><!-- /.container-fluid -->
-    </div>
-    <!-- /.content-header -->
+	<!-- Content Header (Page header) -->
+	<div class="content-header">
+		<div class="container-fluid">
+			<div class="row mb-2">
+				<div class="col-sm-6">
+					<h1 class="m-0 text-dark">Ludo et Sophie - Editer d'un attribut</h1>
+				</div>
+				<!-- /.col -->
+				<div class="col-sm-6">
+					<ol class="breadcrumb float-sm-right">
+						<li class="breadcrumb-item">
+							<a href="{{ path('admin') }}">Dashboard</a>
+						</li>
+						<li class="breadcrumb-item active">Attributs</li>
+					</ol>
+				</div>
+				<!-- /.col -->
+			</div>
+			<!-- /.row -->
+		</div>
+		<!-- /.container-fluid -->
+	</div>
+	<!-- /.content-header -->
 
-    <!-- Main content -->
-    <div class="content">
-        <div class="container-fluid">
+	<!-- Main content -->
+	<div class="content">
+		<div class="container-fluid">
 
-        {{ include('attributes/_form.html.twig', {'button_label': 'Update'}) }}
+			{{ include('attributes/_form.html.twig', {'button_label': 'Update'}) }}
 
-        <a href="{{ path('attributes_index') }}">back to list</a>
+			<a href="{{ path('attributes_index') }}">Retour à la liste</a>
 
-        {{ include('attributes/_delete_form.html.twig') }}
+			{{ include('attributes/_delete_form.html.twig') }}
 
 
-</div></div>{% endblock %}
+		</div>
+	</div>
+{% endblock %}
