--- a/templates/categories/edit.html.twig
+++ b/templates/categories/edit.html.twig
@@ -1,35 +1,42 @@
 {% extends 'base-admin.html.twig' %}
 
-{% block title %}Edit Categories{% endblock %}
+{% block title %}Ludo et Sophie - Editer catégorie
+{% endblock %}
 
 {% block body %}
-<!-- Content Header (Page header) -->
-<div class="content-header">
-    <div class="container-fluid">
-        <div class="row mb-2">
-            <div class="col-sm-6">
-                <h1 class="m-0 text-dark">Ludo et Sophie - Nouvel attribut</h1>
-            </div><!-- /.col -->
-            <div class="col-sm-6">
-                <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a href="{{ path('admin') }}">Dashboard</a></li>
-                    <li class="breadcrumb-item active">Attributs</li>
-                </ol>
-            </div><!-- /.col -->
-        </div><!-- /.row -->
-    </div><!-- /.container-fluid -->
-</div>
-<!-- /.content-header -->
+	<!-- Content Header (Page header) -->
+	<div class="content-header">
+		<div class="container-fluid">
+			<div class="row mb-2">
+				<div class="col-sm-6">
+					<h1 class="m-0 text-dark">Ludo et Sophie - Editer catégorie</h1>
+				</div>
+				<!-- /.col -->
+				<div class="col-sm-6">
+					<ol class="breadcrumb float-sm-right">
+						<li class="breadcrumb-item">
+							<a href="{{ path('admin') }}">Dashboard</a>
+						</li>
+						<li class="breadcrumb-item active">Catégories</li>
+					</ol>
+				</div>
+				<!-- /.col -->
+			</div>
+			<!-- /.row -->
+		</div>
+		<!-- /.container-fluid -->
+	</div>
+	<!-- /.content-header -->
 
-<!-- Main content -->
-<div class="content">
-    <div class="container-fluid">Edit Categories</h1>
+	<!-- Main content -->
+	<div class="content">
+		<div class="container-fluid">
 
-        {{ include('categories/_form.html.twig', {'button_label': 'Update'}) }}
+			{{ include('categories/_form.html.twig', {'button_label': 'Update'}) }}
 
-        <a href="{{ path('categories_index') }}">back to list</a>
+			<a href="{{ path('categories_index') }}">Retour à la liste</a>
 
-        {{ include('categories/_delete_form.html.twig') }}
-    </div>
-</div>
+			{{ include('categories/_delete_form.html.twig') }}
+		</div>
+	</div>
 {% endblock %}
