--- a/templates/categories/index.html.twig
+++ b/templates/categories/index.html.twig
@@ -1,72 +1,78 @@
 {% extends 'base-admin.html.twig' %}
 
-{% block title %}Categories index{% endblock %}
+{% block title %}Ludo et Sophie - Index des catégories{% endblock %}
 
 {% block body %}
-<!-- Content Header (Page header) -->
-<div class="content-header">
-    <div class="container-fluid">
-        <div class="row mb-2">
-            <div class="col-sm-6">
-                <h1 class="m-0 text-dark">Ludo et Sophie - Nouvel attribut</h1>
-            </div><!-- /.col -->
-            <div class="col-sm-6">
-                <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a href="{{ path('admin') }}">Dashboard</a></li>
-                    <li class="breadcrumb-item active">Attributs</li>
-                </ol>
-            </div><!-- /.col -->
-        </div><!-- /.row -->
-    </div><!-- /.container-fluid -->
-</div>
-<!-- /.content-header -->
+	<!-- Content Header (Page header) -->
+	<div class="content-header">
+		<div class="container-fluid">
+			<div class="row mb-2">
+				<div class="col-sm-6">
+					<h1 class="m-0 text-dark">Ludo et Sophie - Index des catégories</h1>
+				</div>
+				<!-- /.col -->
+				<div class="col-sm-6">
+					<ol class="breadcrumb float-sm-right">
+						<li class="breadcrumb-item">
+							<a href="{{ path('admin') }}">Dashboard</a>
+						</li>
+						<li class="breadcrumb-item active">Catégories</li>
+					</ol>
+				</div>
+				<!-- /.col -->
+			</div>
+			<!-- /.row -->
+		</div>
+		<!-- /.container-fluid -->
+	</div>
+	<!-- /.content-header -->
 
-<!-- Main content -->
-<div class="content">
-    <div class="container-fluid">Categories index</h1>
+	<!-- Main content -->
+	<div class="content">
+		<div class="container-fluid">
 
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Id</th>
-                    <th>Title</th>
-                    <th>Description</th>
-                    <th>Keywords</th>
-                    <th>Meta_tag_title</th>
-                    <th>Meta_tag_description</th>
-                    <th>Meta_tag_keywords</th>
-                    <th>Image</th>
-                    <th>Slug</th>
-                    <th>actions</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for category in categories %}
-                <tr>
-                    <td>{{ category.id }}</td>
-                    <td>{{ category.title }}</td>
-                    <td>{{ category.description }}</td>
-                    <td>{{ category.keywords ? category.keywords|json_encode : '' }}</td>
-                    <td>{{ category.metaTagTitle }}</td>
-                    <td>{{ category.metaTagDescription }}</td>
-                    <td>{{ category.metaTagKeywords ? category.metaTagKeywords|json_encode : '' }}</td>
-                    <td>{{ category.image ? category.image|json_encode : '' }}</td>
-                    <td>{{ category.slug }}</td>
-                    <td>
-                        <a href="{{ path('categories_show', {'id': category.id}) }}">show</a>
-                        <a href="{{ path('categories_edit', {'id': category.id}) }}">edit</a>
-                    </td>
-                </tr>
-                {% else %}
-                <tr>
-                    <td colspan="10">no records found</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+			<table class="table">
+				<thead>
+					<tr>
+						<th>Id</th>
+						<th>Title</th>
+						<th>Description</th>
+						<th>Keywords</th>
+						<th>Meta_tag_title</th>
+						<th>Meta_tag_description</th>
+						<th>Meta_tag_keywords</th>
+						<th>Image</th>
+						<th>Slug</th>
+						<th>actions</th>
+					</tr>
+				</thead>
+				<tbody>
+					{% for category in categories %}
+						<tr>
+							<td>{{ category.id }}</td>
+							<td>{{ category.title }}</td>
+							<td>{{ category.description }}</td>
+							<td>{{ category.keywords ? category.keywords|json_encode : '' }}</td>
+							<td>{{ category.metaTagTitle }}</td>
+							<td>{{ category.metaTagDescription }}</td>
+							<td>{{ category.metaTagKeywords ? category.metaTagKeywords|json_encode : '' }}</td>
+							<td>{{ category.image ? category.image|json_encode : '' }}</td>
+							<td>{{ category.slug }}</td>
+							<td>
+								<a href="{{ path('categories_show', {'id': category.id}) }}">show</a>
+								<a href="{{ path('categories_edit', {'id': category.id}) }}">edit</a>
+							</td>
+						</tr>
+					{% else %}
+						<tr>
+							<td colspan="10">Aucune catégorie</td>
+						</tr>
+					{% endfor %}
+				</tbody>
+			</table>
 
-        <a href="{{ path('categories_new') }}">Create new</a>
+			<a href="{{ path('categories_new') }}">Créer nouvelle catégorie</a>
 
-    </div>
-</div>
+		</div>
+	</div>
 {% endblock %}
