--- a/templates/comments/index.html.twig
+++ b/templates/comments/index.html.twig
@@ -1,53 +1,61 @@
 {% extends 'base-admin.html.twig' %}
 
-{% block title %}Comments index{% endblock %}
+{% block title %}Ludo et Sophie - Index des avis clients
+{% endblock %}
 
 {% block body %}
-<!-- Content Header (Page header) -->
-<div class="content-header">
-    <div class="container-fluid">
-        <div class="row mb-2">
-            <div class="col-sm-6">
-                <h1 class="m-0 text-dark">Ludo et Sophie - Nouvel attribut</h1>
-            </div><!-- /.col -->
-            <div class="col-sm-6">
-                <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a href="{{ path('admin') }}">Dashboard</a></li>
-                    <li class="breadcrumb-item active">Attributs</li>
-                </ol>
-            </div><!-- /.col -->
-        </div><!-- /.row -->
-    </div><!-- /.container-fluid -->
-</div>
-<!-- /.content-header -->
+	<!-- Content Header (Page header) -->
+	<div class="content-header">
+		<div class="container-fluid">
+			<div class="row mb-2">
+				<div class="col-sm-6">
+					<h1 class="m-0 text-dark">Ludo et Sophie - Index des avis clients</h1>
+				</div>
+				<!-- /.col -->
+				<div class="col-sm-6">
+					<ol class="breadcrumb float-sm-right">
+						<li class="breadcrumb-item">
+							<a href="{{ path('admin') }}">Dashboard</a>
+						</li>
+						<li class="breadcrumb-item active">Avis clients</li>
+					</ol>
+				</div>
+				<!-- /.col -->
+			</div>
+			<!-- /.row -->
+		</div>
+		<!-- /.container-fluid -->
+	</div>
+	<!-- /.content-header -->
 
-<!-- Main content -->
-<div class="content">
-    <div class="container-fluid">Comments index</h1>
+	<!-- Main content -->
+	<div class="content">
+		<div class="container-fluid">
 
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Pseudo</th>
-                    <th>Content</th>
-                    <th>actions</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for comment in comments %}
-                <tr>
-                    <td>{{ comment.pseudo }}</td>
-                    <td>{{ comment.content }}</td>
-                    <td>
-                        <a href="{{ path('comments_show', {'id': comment.id}) }}">Voir</a>
-                    </td>
-                </tr>
-                {% else %}
-                <tr>
-                    <td colspan="4">Aucun commentaire</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
-</div>{% endblock %}
+			<table class="table">
+				<thead>
+					<tr>
+						<th>Pseudo</th>
+						<th>Content</th>
+						<th>actions</th>
+					</tr>
+				</thead>
+				<tbody>
+					{% for comment in comments %}
+						<tr>
+							<td>{{ comment.pseudo }}</td>
+							<td>{{ comment.content }}</td>
+							<td>
+								<a href="{{ path('comments_show', {'id': comment.id}) }}">Voir</a>
+							</td>
+						</tr>
+					{% else %}
+						<tr>
+							<td colspan="4">Aucun avis client</td>
+						</tr>
+					{% endfor %}
+				</tbody>
+			</table>
+		</div>
+	</div>
+{% endblock %}
