--- a/templates/comments/show.html.twig
+++ b/templates/comments/show.html.twig
@@ -1,51 +1,61 @@
 {% extends 'base-admin.html.twig' %}
 
-{% block title %}Comments{% endblock %}
+{% block title %}Ludo et Sophie - avis client
+	{{ comment.id }}
+{% endblock %}
 
 {% block body %}
-<!-- Content Header (Page header) -->
-<div class="content-header">
-    <div class="container-fluid">
-        <div class="row mb-2">
-            <div class="col-sm-6">
-                <h1 class="m-0 text-dark">Ludo et Sophie - Nouvel attribut</h1>
-            </div><!-- /.col -->
-            <div class="col-sm-6">
-                <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a href="{{ path('admin') }}">Dashboard</a></li>
-                    <li class="breadcrumb-item active">Attributs</li>
-                </ol>
-            </div><!-- /.col -->
-        </div><!-- /.row -->
-    </div><!-- /.container-fluid -->
-</div>
-<!-- /.content-header -->
+	<!-- Content Header (Page header) -->
+	<div class="content-header">
+		<div class="container-fluid">
+			<div class="row mb-2">
+				<div class="col-sm-6">
+					<h1 class="m-0 text-dark">Ludo et Sophie - avis client
+						{{ comment.id }}</h1>
+				</div>
+				<!-- /.col -->
+				<div class="col-sm-6">
+					<ol class="breadcrumb float-sm-right">
+						<li class="breadcrumb-item">
+							<a href="{{ path('admin') }}">Dashboard</a>
+						</li>
+						<li class="breadcrumb-item active">Avis clients</li>
+					</ol>
+				</div>
+				<!-- /.col -->
+			</div>
+			<!-- /.row -->
+		</div>
+		<!-- /.container-fluid -->
+	</div>
+	<!-- /.content-header -->
 
-<!-- Main content -->
-<div class="content">
-    <div class="container-fluid">Comments</h1>
+	<!-- Main content -->
+	<div class="content">
+		<div class="container-fluid">
 
-        <table class="table">
-            <tbody>
-                <tr>
-                    <th>Id</th>
-                    <td>{{ comment.id }}</td>
-                </tr>
-                <tr>
-                    <th>Pseudo</th>
-                    <td>{{ comment.pseudo }}</td>
-                </tr>
-                <tr>
-                    <th>Content</th>
-                    <td>{{ comment.content }}</td>
-                </tr>
-            </tbody>
-        </table>
+			<table class="table">
+				<tbody>
+					<tr>
+						<th>Id</th>
+						<td>{{ comment.id }}</td>
+					</tr>
+					<tr>
+						<th>Pseudo</th>
+						<td>{{ comment.pseudo }}</td>
+					</tr>
+					<tr>
+						<th>Content</th>
+						<td>{{ comment.content }}</td>
+					</tr>
+				</tbody>
+			</table>
 
-        <a href="{{ path('comments_index') }}">back to list</a>
+			<a href="{{ path('comments_index') }}">Retour à la liste</a>
 
-        <a href="{{ path('comments_edit', {'id': comment.id}) }}">edit</a>
+			<a href="{{ path('comments_edit', {'id': comment.id}) }}">Modérer</a>
 
-        {{ include('comments/_delete_form.html.twig') }}
-    </div>
-</div>{% endblock %}
+			{{ include('comments/_delete_form.html.twig') }}
+		</div>
+	</div>
+{% endblock %}
