--- a/templates/languages/index.html.twig
+++ b/templates/languages/index.html.twig
@@ -1,58 +1,65 @@
 {% extends 'base-admin.html.twig' %}
 
-{% block title %}Languages index{% endblock %}
+{% block title %}Ludo et Sophie - Index des langues de publication des ***REMOVED***
+{% endblock %}
 
 {% block body %}
-<!-- Content Header (Page header) -->
-<div class="content-header">
-    <div class="container-fluid">
-        <div class="row mb-2">
-            <div class="col-sm-6">
-                <h1 class="m-0 text-dark">Ludo et Sophie - Nouvel attribut</h1>
-            </div><!-- /.col -->
-            <div class="col-sm-6">
-                <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a href="{{ path('admin') }}">Dashboard</a></li>
-                    <li class="breadcrumb-item active">Attributs</li>
-                </ol>
-            </div><!-- /.col -->
-        </div><!-- /.row -->
-    </div><!-- /.container-fluid -->
-</div>
-<!-- /.content-header -->
+	<!-- Content Header (Page header) -->
+	<div class="content-header">
+		<div class="container-fluid">
+			<div class="row mb-2">
+				<div class="col-sm-6">
+					<h1 class="m-0 text-dark">Ludo et Sophie - Index des langues de publication des ***REMOVED***</h1>
+				</div>
+				<!-- /.col -->
+				<div class="col-sm-6">
+					<ol class="breadcrumb float-sm-right">
+						<li class="breadcrumb-item">
+							<a href="{{ path('admin') }}">Dashboard</a>
+						</li>
+						<li class="breadcrumb-item active">Langues de publication des ***REMOVED***</li>
+					</ol>
+				</div>
+				<!-- /.col -->
+			</div>
+			<!-- /.row -->
+		</div>
+		<!-- /.container-fluid -->
+	</div>
+	<!-- /.content-header -->
 
-<!-- Main content -->
-<div class="content">
-    <div class="container-fluid">Languages index</h1>
+	<!-- Main content -->
+	<div class="content">
+		<div class="container-fluid">
 
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Id</th>
-                    <th>Name</th>
-                    <th>Flag</th>
-                    <th>actions</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for language in languages %}
-                <tr>
-                    <td>{{ language.id }}</td>
-                    <td>{{ language.name }}</td>
-                    <td>{{ language.flag }}</td>
-                    <td>
-                        <a href="{{ path('languages_show', {'id': language.id}) }}">show</a>
-                        <a href="{{ path('languages_edit', {'id': language.id}) }}">edit</a>
-                    </td>
-                </tr>
-                {% else %}
-                <tr>
-                    <td colspan="4">no records found</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+			<table class="table">
+				<thead>
+					<tr>
+						<th>Id</th>
+						<th>Name</th>
+						<th>Flag</th>
+						<th>actions</th>
+					</tr>
+				</thead>
+				<tbody>
+					{% for language in languages %}
+						<tr>
+							<td>{{ language.id }}</td>
+							<td>{{ language.name }}</td>
+							<td>{{ language.flag }}</td>
+							<td>
+								<a href="{{ path('languages_edit', {'id': language.id}) }}">Editer</a>
+							</td>
+						</tr>
+					{% else %}
+						<tr>
+							<td colspan="4">Aucune langue</td>
+						</tr>
+					{% endfor %}
+				</tbody>
+			</table>
 
-        <a href="{{ path('languages_new') }}">Create new</a>
-    </div>
-</div>{% endblock %}
+			<a href="{{ path('languages_new') }}">Ajouter langue de publication des ***REMOVED***</a>
+		</div>
+	</div>
+{% endblock %}
