--- a/templates/pages/show.html.twig
+++ b/templates/pages/show.html.twig
@@ -1,82 +1,92 @@
 {% extends 'base-admin.html.twig' %}
 
-{% block title %}Pages{% endblock %}
+{% block title %}Ludo et Sophie - Publication {{ page.id }}
+{% endblock %}
 
-{% block body %}    
-<!-- Content Header (Page header) -->
-    <div class="content-header">
-        <div class="container-fluid">
-            <div class="row mb-2">
-            <div class="col-sm-6">
-                <h1 class="m-0 text-dark">Ludo et Sophie - Nouvel attribut</h1>
-            </div><!-- /.col -->
-            <div class="col-sm-6">
-                <ol class="breadcrumb float-sm-right">
-                <li class="breadcrumb-item"><a href="{{ path('admin') }}">Dashboard</a></li>
-                <li class="breadcrumb-item active">Attributs</li>
-                </ol>
-            </div><!-- /.col -->
-            </div><!-- /.row -->
-        </div><!-- /.container-fluid -->
-    </div>
-    <!-- /.content-header -->
+{% block body %}
+	<!-- Content Header (Page header) -->
+	<div class="content-header">
+		<div class="container-fluid">
+			<div class="row mb-2">
+				<div class="col-sm-6">
+					<h1 class="m-0 text-dark">Ludo et Sophie - Publication {{ page.id }}</h1>
+				</div>
+				<!-- /.col -->
+				<div class="col-sm-6">
+					<ol class="breadcrumb float-sm-right">
+						<li class="breadcrumb-item">
+							<a href="{{ path('admin') }}">Dashboard</a>
+						</li>
+						<li class="breadcrumb-item active">Publications</li>
+					</ol>
+				</div>
+				<!-- /.col -->
+			</div>
+			<!-- /.row -->
+		</div>
+		<!-- /.container-fluid -->
+	</div>
+	<!-- /.content-header -->
 
-    <!-- Main content -->
-    <div class="content">
-        <div class="container-fluid">Pages</h1>
+	<!-- Main content -->
+	<div class="content">
+		<div class="container-fluid">
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ page.id }}</td>
-            </tr>
-            <tr>
-                <th>Title</th>
-                <td>{{ page.title }}</td>
-            </tr>
-            <tr>
-                <th>Content</th>
-                <td>{{ page.content }}</td>
-            </tr>
-            <tr>
-                <th>Image</th>
-                <td>{{ page.image ? page.image|json_encode : '' }}</td>
-            </tr>
-            <tr>
-                <th>Keywords</th>
-                <td>{{ page.keywords ? page.keywords|json_encode : '' }}</td>
-            </tr>
-            <tr>
-                <th>Meta_tag_title</th>
-                <td>{{ page.metaTagTitle }}</td>
-            </tr>
-            <tr>
-                <th>Meta_tag_description</th>
-                <td>{{ page.metaTagDescription }}</td>
-            </tr>
-            <tr>
-                <th>Meta_tag_keywords</th>
-                <td>{{ page.metaTagKeywords ? page.metaTagKeywords|json_encode : '' }}</td>
-            </tr>
-            <tr>
-                <th>Created_at</th>
-                <td>{{ page.createdAt ? page.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-            <tr>
-                <th>Updated_at</th>
-                <td>{{ page.updatedAt ? page.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-            <tr>
-                <th>Slug</th>
-                <td>{{ page.slug }}</td>
-            </tr>
-        </tbody>
-    </table>
+			<table class="table">
+				<tbody>
+					<tr>
+						<th>Id</th>
+						<td>{{ page.id }}</td>
+					</tr>
+					<tr>
+						<th>Title</th>
+						<td>{{ page.title }}</td>
+					</tr>
+					<tr>
+						<th>Content</th>
+						<td>{{ page.content }}</td>
+					</tr>
+					<tr>
+						<th>Image</th>
+						<td>{{ page.image ? page.image|json_encode : '' }}</td>
+					</tr>
+					<tr>
+						<th>Keywords</th>
+						<td>{{ page.keywords ? page.keywords|json_encode : '' }}</td>
+					</tr>
+					<tr>
+						<th>Meta_tag_title</th>
+						<td>{{ page.metaTagTitle }}</td>
+					</tr>
+					<tr>
+						<th>Meta_tag_description</th>
+						<td>{{ page.metaTagDescription }}</td>
+					</tr>
+					<tr>
+						<th>Meta_tag_keywords</th>
+						<td>{{ page.metaTagKeywords ? page.metaTagKeywords|json_encode : '' }}</td>
+					</tr>
+					<tr>
+						<th>Created_at</th>
+						<td>{{ page.createdAt ? page.createdAt|date('Y-m-d H:i:s') : '' }}</td>
+					</tr>
+					<tr>
+						<th>Updated_at</th>
+						<td>{{ page.updatedAt ? page.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
+					</tr>
+					<tr>
+						<th>Slug</th>
+						<td>{{ page.slug }}</td>
+					</tr>
+				</tbody>
+			</table>
 
-    <a href="{{ path('pages_index') }}">back to list</a>
+			<a href="{{ path('pages_index') }}">Retour à la liste des publications</a>
 
-    <a href="{{ path('pages_edit', {'id': page.id}) }}">edit</a>
+			<a href="{{ path('pages_edit', {'id': page.id}) }}">Modifier</a>
 
-    {{ include('pages/_delete_form.html.twig') }}
-</div></div>{% endblock %}
+			{{ include('pages/_delete_form.html.twig') }}
+		</div>
+	</div>
+
+{% endblock %}
