--- a/templates/products/index.html.twig
+++ b/templates/products/index.html.twig
@@ -1,85 +1,95 @@
 {% extends 'base-admin.html.twig' %}
 
-{% block title %}Products index{% endblock %}
+{% block title %}Ludo et Sophie - Index des ***REMOVED***
+{% endblock %}
 
 {% block body %}
-<!-- Content Header (Page header) -->
-    <div class="content-header">
-        <div class="container-fluid">
-            <div class="row mb-2">
-            <div class="col-sm-6">
-                <h1 class="m-0 text-dark">Ludo et Sophie - Nouvel attribut</h1>
-            </div><!-- /.col -->
-            <div class="col-sm-6">
-                <ol class="breadcrumb float-sm-right">
-                <li class="breadcrumb-item"><a href="{{ path('admin') }}">Dashboard</a></li>
-                <li class="breadcrumb-item active">Attributs</li>
-                </ol>
-            </div><!-- /.col -->
-            </div><!-- /.row -->
-        </div><!-- /.container-fluid -->
-    </div>
-    <!-- /.content-header -->
+	<!-- Content Header (Page header) -->
+	<div class="content-header">
+		<div class="container-fluid">
+			<div class="row mb-2">
+				<div class="col-sm-6">
+					<h1 class="m-0 text-dark">Ludo et Sophie - Index des ***REMOVED***</h1>
+				</div>
+				<!-- /.col -->
+				<div class="col-sm-6">
+					<ol class="breadcrumb float-sm-right">
+						<li class="breadcrumb-item">
+							<a href="{{ path('admin') }}">Dashboard</a>
+						</li>
+						<li class="breadcrumb-item active">Sorties</li>
+					</ol>
+				</div>
+				<!-- /.col -->
+			</div>
+			<!-- /.row -->
+		</div>
+		<!-- /.container-fluid -->
+	</div>
+	<!-- /.content-header -->
 
-    <!-- Main content -->
-    <div class="content">
-        <div class="container-fluid">Edit Products</h1>
+	<!-- Main content -->
+	<div class="content">
+		<div class="container-fluid">
 
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Id</th>
-                    <th>Title</th>
-                    <th>Description</th>
-                    <th>Hangout_location</th>
-                    <th>Keywords</th>
-                    <th>Image</th>
-                    <th>Meta_tag_title</th>
-                    <th>Meta_tag_description</th>
-                    <th>Meta_tag_keywords</th>
-                    <th>Reference</th>
-                    <th>Weezeevent</th>
-                    <th>Created_at</th>
-                    <th>Updated_at</th>
-                    <th>Pre_tax_price</th>
-                    <th>Tax_included_price</th>
-                    <th>Slug</th>
-                    <th>actions</th>
-                </tr>
-            </thead>
-            <tbody>
-            {% for product in products %}
-                <tr>
-                    <td>{{ product.id }}</td>
-                    <td>{{ product.title }}</td>
-                    <td>{{ product.description }}</td>
-                    <td>{{ product.hangoutLocation }}</td>
-                    <td>{{ product.keywords ? product.keywords|json_encode : '' }}</td>
-                    <td>{{ product.image ? product.image|json_encode : '' }}</td>
-                    <td>{{ product.metaTagTitle }}</td>
-                    <td>{{ product.metaTagDescription }}</td>
-                    <td>{{ product.metaTagKeywords ? product.metaTagKeywords|json_encode : '' }}</td>
-                    <td>{{ product.reference }}</td>
-                    <td>{{ product.weezeevent }}</td>
-                    <td>{{ product.createdAt ? product.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-                    <td>{{ product.updatedAt ? product.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
-                    <td>{{ product.preTaxPrice }}</td>
-                    <td>{{ product.taxIncludedPrice }}</td>
-                    <td>{{ product.slug }}</td>
-                    <td>
-                        <a href="{{ path('products_show', {'id': product.id}) }}">show</a>
-                        <a href="{{ path('products_edit', {'id': product.id}) }}">edit</a>
-                    </td>
-                </tr>
-            {% else %}
-                <tr>
-                    <td colspan="17">no records found</td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+			<table class="table">
+				<thead>
+					<tr>
+						<th>Id</th>
+						<th>Title</th>
+						<th>Description</th>
+						<th>Hangout_location</th>
+						<th>Keywords</th>
+						<th>Image</th>
+						<th>Meta_tag_title</th>
+						<th>Meta_tag_description</th>
+						<th>Meta_tag_keywords</th>
+						<th>Reference</th>
+						<th>Weezeevent</th>
+						<th>Created_at</th>
+						<th>Updated_at</th>
+						<th>Pre_tax_price</th>
+						<th>Tax_included_price</th>
+						<th>Slug</th>
+						<th>actions</th>
+					</tr>
+				</thead>
+				<tbody>
+					{% for product in products %}
+						<tr>
+							<td>{{ product.id }}</td>
+							<td>{{ product.title }}</td>
+							<td>{{ product.description }}</td>
+							<td>{{ product.hangoutLocation }}</td>
+							<td>{{ product.keywords ? product.keywords|json_encode : '' }}</td>
+							<td>{{ product.image ? product.image|json_encode : '' }}</td>
+							<td>{{ product.metaTagTitle }}</td>
+							<td>{{ product.metaTagDescription }}</td>
+							<td>{{ product.metaTagKeywords ? product.metaTagKeywords|json_encode : '' }}</td>
+							<td>{{ product.reference }}</td>
+							<td>{{ product.weezeevent }}</td>
+							<td>{{ product.createdAt ? product.createdAt|date('Y-m-d H:i:s') : '' }}</td>
+							<td>{{ product.updatedAt ? product.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
+							<td>{{ product.preTaxPrice }}</td>
+							<td>{{ product.taxIncludedPrice }}</td>
+							<td>{{ product.slug }}</td>
+							<td>
+								<a href="{{ path('products_show', {'id': product.id}) }}">show</a>
+								<a href="{{ path('products_edit', {'id': product.id}) }}">edit</a>
+							</td>
+						</tr>
+					{% else %}
+						<tr>
+							<td colspan="17">no records found</td>
+						</tr>
+					{% endfor %}
+				</tbody>
+			</table>
 
-        <a href="{{ path('products_new') }}">Create new</a>
+			<a href="{{ path('products_new') }}">Créer nouvelle sortie</a>
 
 
-</div></div>{% endblock %}
+		</div>
+	</div>
+
+{% endblock %}
