Francisation de quelques liens

--- a/templates/attributes/index.html.twig
+++ b/templates/attributes/index.html.twig
@@ -47,8 +47,8 @@
 							<td>{{ attribute.name }}</td>
 							<td>{{ attribute.value }}</td>
 							<td>
-								<a href="{{ path('attributes_show', {'id': attribute.id}) }}">show</a>
-								<a href="{{ path('attributes_edit', {'id': attribute.id}) }}">edit</a>
+								<a href="{{ path('attributes_show', {'id': attribute.id}) }}">Voir</a>
+								<a href="{{ path('attributes_edit', {'id': attribute.id}) }}">Modifier</a>
 							</td>
 						</tr>
 					{% else %}
