--- a/templates/products/index.html.twig
+++ b/templates/products/index.html.twig
@@ -74,8 +74,8 @@
 							<td>{{ product.taxIncludedPrice }}</td>
 							<td>{{ product.slug }}</td>
 							<td>
-								<a href="{{ path('products_show', {'id': product.id}) }}">show</a>
-								<a href="{{ path('products_edit', {'id': product.id}) }}">edit</a>
+								<a href="{{ path('products_show', {'id': product.id}) }}">Voir</a>
+								<a href="{{ path('products_edit', {'id': product.id}) }}">Modifier</a>
 							</td>
 						</tr>
 					{% else %}
