--- a/templates/users/index.html.twig
+++ b/templates/users/index.html.twig
@@ -50,7 +50,7 @@
 							<td>{{ user.lastname }}</td>
 							<td>
 								<a href="{{ path('users_show', {'id': user.id}) }}">Voir</a>
-								<a href="{{ path('users_edit', {'id': user.id}) }}">edit</a>
+								<a href="{{ path('users_edit', {'id': user.id}) }}">Modifier</a>
 								{{ include('users/_delete_form.html.twig') }}
 							</td>
 						</tr>
