--- a/templates/pages/index.html.twig
+++ b/templates/pages/index.html.twig
@@ -64,8 +64,8 @@
 							<td>{{ page.updatedAt ? page.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
 							<td>{{ page.slug }}</td>
 							<td>
-								<a href="{{ path('pages_show', {'id': page.id}) }}">show</a>
-								<a href="{{ path('pages_edit', {'id': page.id}) }}">edit</a>
+								<a href="{{ path('pages_show', {'id': page.id}) }}">Voir</a>
+								<a href="{{ path('pages_edit', {'id': page.id}) }}">Modifier</a>
 							</td>
 						</tr>
 					{% else %}
