--- a/templates/users/show.html.twig
+++ b/templates/users/show.html.twig
@@ -10,7 +10,7 @@
 		<div class="container-fluid">
 			<div class="row mb-2">
 				<div class="col-sm-6">
-					<h1 class="m-0 text-dark">Ludo et Sophie - Utilisateur {{ user.id }}</h1>
+					<h1 class="m-0 text-dark">Ludo et Sophie - Utilisateur {{ user.firstname }} {{ user.lastname }}</h1>
 				</div>
 				<!-- /.col -->
 				<div class="col-sm-6">
@@ -36,25 +36,22 @@
 			<table class="table">
 				<tbody>
 					<tr>
-						<th>Id</th>
-						<td>{{ user.id }}</td>
-					</tr>
-					<tr>
 						<th>Email</th>
 						<td>{{ user.email }}</td>
 					</tr>
 					<tr>
-						<th>Roles</th>
-						<td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-					</tr>
-					<tr>
-						<th>Firstname</th>
+						<th>Prénom</th>
 						<td>{{ user.firstname }}</td>
 					</tr>
 					<tr>
-						<th>Lastname</th>
+						<th>Nom</th>
 						<td>{{ user.lastname }}</td>
+					</tr>					
+					<tr>
+						<th>Roles</th>
+						<td>{{ user.roles ? user.roles|json_encode : '' }}</td>
 					</tr>
+
 				</tbody>
 			</table>
 
